<resources>
    <string name="app_name">EnterMeasure</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pulse">Pulse</string>
    <string name="orientation">Orientation</string>
    <string name="time">Time</string>
    <string name="gap">Gap</string>
    <string name="Side">Side</string>
    <string name="MaxValue">Max Value</string>
    <string name="MaxSize">Max Size</string>
    <string name="MaxMeasure">Max Measure</string>
    <string name="request">Request</string>
    <string name="storagetype">Storage Type</string>
    <string name="comment">Comment</string>
    <string name="maxValue">Max Value</string>
    <string name="maxSize">Max Size</string>
    <string name="maxMeasure">Max Measure</string>
    <string name="FileHandler">File Handler</string>
    <string name="Size">Size</string>
    <string name="Root" />
    <string name="showRoots">Roots</string>
    <string name="showDirectory">Directory</string>
</resources>