<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical|horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/orientationLab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="3dp"
            android:text="@string/orientation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/orientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/orientationLab"
            app:layout_constraintLeft_toRightOf="@id/orientationLab" />

        <TextView
            android:id="@+id/timeLab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="3dp"
            android:text="@string/time"
            app:layout_constraintRight_toRightOf="@id/orientationLab"
            app:layout_constraintTop_toBottomOf="@id/orientationLab" />

        <EditText
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="datetime"
            app:layout_constraintBottom_toBottomOf="@id/timeLab"
            app:layout_constraintLeft_toRightOf="@id/orientationLab" />

        <TextView
            android:id="@+id/gapLab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="3dp"
            android:text="@string/gap"
            app:layout_constraintRight_toRightOf="@id/orientationLab"
            app:layout_constraintTop_toBottomOf="@id/time" />

        <EditText
            android:id="@+id/gap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:focusable="false"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@id/gapLab"
            app:layout_constraintLeft_toRightOf="@id/orientationLab" />

        <TextView
            android:id="@+id/sideLab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="3dp"
            android:text="@string/Side"
            app:layout_constraintRight_toRightOf="@id/orientationLab"
            app:layout_constraintTop_toBottomOf="@id/gap" />

        <Spinner
            android:id="@+id/side"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/sideLab"
            app:layout_constraintLeft_toRightOf="@id/orientationLab" />

        <TextView
            android:id="@+id/systolicLab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="3dp"
            android:text="@string/systolic"
            app:layout_constraintRight_toRightOf="@id/orientationLab"
            app:layout_constraintTop_toBottomOf="@id/sideLab" />

        <EditText
            android:id="@+id/systolic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="number"
            android:maxLength="3"
            app:layout_constraintBottom_toBottomOf="@id/systolicLab"
            app:layout_constraintLeft_toRightOf="@id/orientationLab" />

        <TextView
            android:id="@+id/diastolicLab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="3dp"
            android:text="@string/diastolic"
            app:layout_constraintRight_toRightOf="@id/orientationLab"
            app:layout_constraintTop_toBottomOf="@id/systolicLab" />

        <EditText
            android:id="@+id/diastolic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="number"
            android:maxLength="3"
            app:layout_constraintBottom_toBottomOf="@id/diastolicLab"
            app:layout_constraintLeft_toRightOf="@id/orientationLab" />

        <TextView
            android:id="@+id/pulseLab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="3dp"
            android:text="@string/pulse"
            app:layout_constraintRight_toRightOf="@id/orientationLab"
            app:layout_constraintTop_toBottomOf="@id/diastolicLab" />

        <EditText
            android:id="@+id/pulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="number"
            android:maxLength="3"
            app:layout_constraintBottom_toBottomOf="@id/pulseLab"
            app:layout_constraintLeft_toRightOf="@id/orientationLab" />

        <TextView
            android:id="@+id/commentLab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="3dp"
            android:text="@string/comment"
            app:layout_constraintRight_toRightOf="@id/orientationLab"
            app:layout_constraintTop_toBottomOf="@id/pulseLab" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="text"
            android:maxLength="80"
            app:layout_constraintBottom_toBottomOf="@id/commentLab"
            app:layout_constraintLeft_toRightOf="@id/orientationLab" />

        <Button
            android:id="@+id/update"
            style="@style/ActionButton"
            android:text="Update"
            app:layout_constraintRight_toLeftOf="@id/save"
            app:layout_constraintTop_toBottomOf="@id/comment" />

        <Button
            android:id="@+id/save"
            style="@style/ActionButton"
            android:text="Save"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/comment" />

        <Button
            android:id="@+id/cancel"
            style="@style/ActionButton"
            android:text="Cancel"
            app:layout_constraintLeft_toRightOf="@id/save"
            app:layout_constraintTop_toBottomOf="@id/comment" />

        <TableLayout
            android:id="@+id/MeasurementsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/save"></TableLayout>

        <ScrollView
            android:id="@+id/MeasuresBodyContainer"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            app:layout_constraintLeft_toLeftOf="@id/MeasurementsHeader"
            app:layout_constraintRight_toRightOf="@id/MeasurementsHeader"
            app:layout_constraintTop_toBottomOf="@id/MeasurementsHeader">

            <TableLayout
                android:id="@+id/MeasurementsBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TableLayout>
        </ScrollView>

        <Button
            android:id="@+id/write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="writeClicked"
            android:text="Write"
            app:layout_constraintRight_toLeftOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/MeasuresBodyContainer" />

        <Button
            android:id="@+id/load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="loadClicked"
            android:text="Load"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/MeasuresBodyContainer" />

        <CheckBox
            android:id="@+id/fillScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="fillScreenChecked"
            android:text="Fill Screen"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/write" />

        <RadioGroup
            android:id="@+id/setdisplaysize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/fillScreen">

            <RadioButton
                android:id="@+id/radiomaxvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="displayTextSizeOptionClicked"
                android:text="@string/maxValue" />

            <RadioButton
                android:id="@+id/radiomaxsize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="displayTextSizeOptionClicked"
                android:text="@string/maxSize" />

            <RadioButton
                android:id="@+id/radiomaxmeasure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="displayTextSizeOptionClicked"
                android:text="@string/maxMeasure" />
        </RadioGroup>
        <Button
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="testClicked"
            android:text="Test"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/setdisplaysize" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>